--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,7 @@
   background-color: black;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
-  padding: 2em 4em;
+  padding: 2em;
 }
 .footer__main__container {
   width: 100%;
@@ -12,7 +12,6 @@
   flex-direction: column;
   max-width: 1366px;
   margin: 0 auto;
-  padding: 0 1em;
 }
 .footer__testim__wrapaer {
   width: 100%;
