--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -458,7 +458,124 @@ body {
   font-weight: 300;
   line-height: 25px;
 }
+.success__story__swiper__over {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 3em;
+}
+.success__story__swiper {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.success__story__swiper__card {
+  width: 100%;
+  // background-color: #132c51;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 3em 0;
+  margin-top: 4em;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.success__story__swiper__card__text {
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2em;
+}
+.success__story__swiper__card__text__heading {
+  font-size: 35px;
+  font-weight: 700;
+  margin: 0.5em 0;
+}
+.success__story__swiper__card__text__subheading {
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0.5em 0;
+  max-width: 500px;
+}
+.success__story__swiper__card__text__enty__wraper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 1em;
+}
+.success__story__swiper__card__text__entry {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em 1em;
+  border-radius: 20px;
+  background-color: #10254560;
+  font-size: 14px;
+  max-width: 150px;
+  margin-right: 1em;
+  transition: 300ms ease-in-out;
+}
+.success__story__swiper__card__text__entry:hover {
+  background-color: #000000;
+  transition: 300ms ease-in-out;
+  color: white;
+}
+.success__story__swiper__card__img {
+  width: 50%;
+  padding: 2em 0;
+}
+.success__story__swiper__card__img img {
+  width: 100%;
+  max-width: 400px;
+  object-fit: cover;
+}
+.success__story__main__container__text {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 2em;
+  margin-top: 3em;
+  color: white;
+}
+.success__story__main__container__text__heading {
+  font-size: 45px;
+  font-weight: 700;
+  max-width: 800px;
+  width: 100%;
+  line-height: 55px;
+  color: white;
+  text-align: center;
+}
+.success__story__main__container__text__subheading {
+  font-size: 18px;
+  font-weight: 300;
+  max-width: 900px;
+  width: 100%;
+  text-align: center;
+  color: #a1a1aa;
+  padding: 1em 0;
+}
 @media screen and (max-width: 1100px) {
+  .success__story__swiper__card__text__enty__wraper {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .success__story__swiper__card__text__entry {
+    margin-bottom: 1em;
+  }
+
   .industries__main__container__wraper__lower__card__contant {
     justify-content: center;
   }
@@ -522,6 +639,21 @@ body {
   }
 }
 @media screen and (max-width: 950px) {
+  .success__story__swiper__card {
+    flex-direction: column;
+  }
+  .success__story__swiper__card__text {
+    width: 100%;
+  }
+  .success__story__swiper__card__img {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .success__story__swiper__card__img img {
+    max-width: 400px;
+  }
   .industries__main__container__wraper__card {
     padding: 1px;
   }
@@ -548,6 +680,22 @@ body {
   }
 }
 @media screen and (max-width: 850px) {
+  .success__story__swiper__card__text__heading {
+    font-size: 26px;
+  }
+  .success__story__swiper__card__text__heading {
+    margin: 0.3em 0;
+  }
+  .success__story__swiper__card__text__subheading {
+    font-size: 14px;
+  }
+  .success__story__main__container__text__heading {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .success__story__main__container__text__subheading {
+    font-size: 16px;
+  }
   .industries__main__container__wraper__lower {
     margin-top: 0;
   }
@@ -640,6 +788,10 @@ body {
   }
 }
 @media (max-width: 600px) {
+  .success__story__main__container__text__heading {
+    font-size: 30px;
+    line-height: 35px;
+  }
   .engement__model__container {
     padding: 2em;
   }
