--- a/src/styles/cardMain.scss
+++ b/src/styles/cardMain.scss
@@ -137,7 +137,7 @@
 }
 .cardsection__content__right__content__card {
   width: 35%;
-  margin: 0em 1em;
+  margin-right: 1em;
   position: relative;
 }
 .cardsection__content__right__content__card__main {
