--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -27,7 +27,7 @@
 .header__nav__container__menu {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   animation: dropdown__list__nav__animation 500ms both;
   transform-origin: right;
 }
@@ -91,6 +91,7 @@
   justify-content: center;
   padding: 0;
   cursor: pointer;
+  z-index: 9999;
 }
 .header__content__menu * {
   pointer-events: none;
@@ -105,14 +106,15 @@
   .header__nav__container__menu {
     flex-direction: column;
     position: absolute;
-    margin-top: -4em;
+    margin-top: -7em;
     background-color: #141414;
     color: #6554dc;
     border-radius: 10px;
     right: 10px;
     z-index: 9999;
     width: 100%;
-    padding: 2em 0;
+    padding: 6em 0;
+    height: 100vh;
   }
   .header__nav__container__menu__links {
     // margin: 1em 0;
